# oraclemcp

./: .dockerignore  .gitattributes  .gitignore  .secret_scan_denylist.example  .skill-loop-progress.md  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  PLAN_0_4_0_PRODUCTION_HARDENING.md  PLAN_0_5_0_STABLE_RELEASE.md  PLAN_0_6_0_INTERACTIVE_ALWAYS_ON.md  PLAN_ASUPERSYNC_THIN_NATIVE.md  README.md  SECURITY.md  deny.toml  engineering-program-manifest.json  install.ps1  install.sh  oraclemcp.example.toml  release-surfaces.toml  rust-toolchain.toml  server.json
.beads/: .gitignore  config.yaml  (+2 more)
crates/oraclemcp/: Cargo.toml  install.ps1  install.sh
crates/oraclemcp-audit/: Cargo.toml
crates/oraclemcp-audit/fuzz/: Cargo.toml
crates/oraclemcp-audit/fuzz/fuzz_targets/: chain_verify.rs
crates/oraclemcp-audit/proptest-regressions/: record.txt
crates/oraclemcp-audit/src/: anchor.rs  hmac.rs  keyring.rs  lib.rs  record.rs  rekor.rs  shipping.rs  shipping_spool.rs  sink.rs  unified.rs  verify.rs
crates/oraclemcp-audit/tests/: e3_audit_chain_e2e.rs  loom_shipping_spool.rs
crates/oraclemcp-auth/: Cargo.toml
crates/oraclemcp-auth/fuzz/: Cargo.toml
crates/oraclemcp-auth/fuzz/fuzz_targets/: oauth_token_validate.rs
crates/oraclemcp-auth/src/: http_guard.rs  lib.rs  oauth_rs.rs  secrets.rs  stepup_delivery.rs  vault_dynamic.rs
crates/oraclemcp-config/: Cargo.toml
crates/oraclemcp-config/fuzz/: Cargo.toml
crates/oraclemcp-config/fuzz/dictionaries/: toml.dict
crates/oraclemcp-config/fuzz/fuzz_targets/: config_toml.rs
crates/oraclemcp-config/src/: lib.rs  profile.rs
crates/oraclemcp-config/tests/: discovery_writer_parity.rs  example_config_parses.rs  profile_merge_properties.rs  profile_merge_property.proptest-regressions  profile_merge_property.rs
crates/oraclemcp-core/: Cargo.toml  ci_taxonomy.json
crates/oraclemcp-core/src/: admin_auth.rs  admission.rs  audit_shipping.rs  capabilities.rs  capability.rs  change_proposal.rs  client_credentials.rs  config_ops.rs  connect.rs  custom_tools.rs  dashboard_auth.rs  dashboard_bundle.rs  doctor.rs  export.rs  fence.rs  file_store.rs  http.rs  iam_token.rs  incident.rs  init_token.rs  lane.rs  lib.rs  notifications.rs  operator_protocol.rs  pagination.rs  plugin.rs  query_execute.rs  redacted.rs  request_budget.rs  resilience.rs  resources.rs  response_budget.rs  schema_diff_export.rs  server.rs  service_app.rs  session_tool.rs  shutdown.rs  source_history.rs  subscriptions.rs  tamper_token.rs  (+3 more)
crates/oraclemcp-core/tests/: c1_oauth_literal_jwt.rs  c2_stdio_init_token_literal_frame.rs  c3_mtls_literal_fingerprints.rs  capability_compile_fail.rs  chaos.rs  concurrency_contract.rs  discovery_config_ops_round_trip.rs  discovery_idempotent_merge.rs  discovery_writer_config_ops.rs  doctor_secret_golden.rs  doctor_wallet_cert_expiry.rs  doctor_wallet_posture.rs  doctor_wallet_resolve_crosscheck.rs  e2e_mcp.rs  golden_behavior.rs  iam_token_source_physical.rs  incident_capture.rs  incident_replay.rs  lane_bridge_phase0.rs  lane_state_machine.rs  loom_admission.rs  loom_lane_lock_order.rs  mcp_conformance.rs  oci_tcps_e2e.rs  phase0_capacity.rs  seeded_fault_injection.rs
crates/oraclemcp-db/: Cargo.toml  README.md
crates/oraclemcp-db/api/: oraclemcp-db.txt
crates/oraclemcp-db/benches/: classify_type.rs  lob_capping.rs  page_serialization.rs
crates/oraclemcp-db/src/: auth_adapter.rs  awr.rs  catalog_extract.rs  catalog_resolver.rs  connection.rs  doctor.rs  error.rs  health.rs  intelligence.rs  lease.rs  lib.rs  masking.rs  native_redaction.rs  oci.rs  plscope.rs  pool.rs  privileges.rs  query.rs  schema_diff.rs  serialize.rs  server_features.rs  standby.rs  tns.rs  types.rs
crates/oraclemcp-db/tests/: cancel_correctness.rs  chaos.rs  live_catalog_resolver.rs  live_egress.rs  live_idle_kill.rs  live_oracle.rs  load_soak.rs  multi_lane_live_xe.rs  oracledb_contract.rs  positional_bind_shape.rs  privilege_degradation.rs  privilege_matrix_live.rs  routine_arg_compile_fail.rs  structured_schema_golden.rs  type_fidelity.rs
crates/oraclemcp-error/: Cargo.toml
crates/oraclemcp-error/api/: oraclemcp-error.txt
crates/oraclemcp-error/src/: lib.rs
crates/oraclemcp-guard/: Cargo.toml
crates/oraclemcp-guard/api/: oraclemcp-guard.txt
crates/oraclemcp-guard/fuzz/: Cargo.toml
crates/oraclemcp-guard/src/: classifier.rs  classifier_grammar.rs  clock.rs  corpus.rs  edition_lifecycle.rs  enforcement.rs  exec_grant.rs  incident.rs  levels.rs  lib.rs  policy.rs  policy_gate.rs  purity.rs  resolver.rs  rewrite.rs  stepup.rs  token.rs
crates/oraclemcp-guard/tests/: adversarial_corpus.rs  classifier_metamorphic.rs  corpus_redaction.rs  cte_dml_adversarial.rs  default_edition_flip_guard.rs  incident_manifest.rs  perf_classifier.rs  proptest_invariants.proptest-regressions  proptest_invariants.rs  purity_core_conformance.rs  token_security.rs  verdict_certificate_emit.rs  verdict_certificate_schema.rs
crates/oraclemcp-telemetry/: Cargo.toml
crates/oraclemcp-telemetry/src/: lib.rs  logging.rs  metrics.rs
crates/oraclemcp-verifier/: Cargo.toml
crates/oraclemcp-verifier/src/: attestation.rs  lib.rs
crates/oraclemcp-verifier/tests/: served_verdict_certificate.rs  test_attest_cli.rs  test_attestation.rs  verdict_verifier.rs
crates/oraclemcp/src/: audit_evidence.rs  cli.rs  cost_budget.rs  discover.rs  dispatch.rs  lib.rs  main.rs  main_tests.rs  masking_salts.rs  plsql_tools.rs  readiness.rs  refusal_corpus.rs  registry.rs  robot_docs.rs  service_lifecycle.rs
crates/oraclemcp/tests/: c6_cli_vs_running_server.rs  clean_machine_e2e.rs  cli.rs  dashboard_e2e.rs  discover_e2e.rs  e2e_harness.rs  e2e_http_oauth.rs  e2e_stdio.rs  edition_lifecycle_live_xe.rs  golden_behavior.rs  golden_scrubber_framework.rs  honesty_grep.rs  incident_cli.rs  installer_e2e.rs  live_dispatcher_idle_kill.rs  live_xe_service_attach.rs  orient_live_xe.rs  plsql_live_xe.rs  r1_external_client.rs  refusal_corpus_cli.rs  release_docs.rs  release_publish_guards.rs  reversible_workspace.rs  rls_vpd_visibility.rs  sec1_reclassification_e2e.rs  trust_safety.rs
(+808 files in other folders)
