[workspace]
members = [
    "crates/oraclemcp-error",
    "crates/oraclemcp-telemetry",
    "crates/oraclemcp-audit",
    "crates/oraclemcp-guard",
    "crates/oraclemcp-config",
    "crates/oraclemcp-db",
    "crates/oraclemcp-auth",
    "crates/oraclemcp-core",
    "crates/oraclemcp",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/MuhDur/oraclemcp"
homepage = "https://github.com/MuhDur/oraclemcp"
# No `rust-version`: the thin-native line is pinned to nightly because
# asupersync/oracledb require nightly-only language features.
keywords = ["oracle", "mcp", "database", "sql"]
categories = ["database", "development-tools"]

[workspace.dependencies]
asupersync = { version = "0.3.4", default-features = false }
oracledb = { version = "0.1.1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

# Crash safety: the shipped server aborts on panic. Only affects release
# builds; `cargo test` still unwinds (so #[should_panic] works).
[profile.release]
panic = "abort"
