[workspace]
members = [
    "crates/oraclemcp-error",
    "crates/oraclemcp-telemetry",
    "crates/oraclemcp-audit",
    "crates/oraclemcp-guard",
    "crates/oraclemcp-config",
    "crates/oraclemcp-db",
    "crates/oraclemcp-auth",
    "crates/oraclemcp-core",
    "crates/oraclemcp",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/MuhDur/oraclemcp"
homepage = "https://github.com/MuhDur/oraclemcp"
# No `rust-version`: the thin-native line is pinned to nightly because
# asupersync/oracledb require nightly-only language features.
keywords = ["oracle", "mcp", "database", "sql"]
categories = ["database", "development-tools"]

[workspace.dependencies]
asupersync = { version = "0.3.4", default-features = false }
# Pinned EXACTLY today (B2; plan §8). The whole oracledb surface is isolated
# behind one adapter (crates/oraclemcp-db/src/connection.rs), so the 0.3.0
# cut-over is a deliberate, single-file change driven by oracledb's
# MIGRATING-0.3.md — never an accidental float into 0.3.x. Relax to "^0.3"
# only as part of that cut-over.
oracledb = { version = "=0.2.2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tracing = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

# Crash safety: the shipped server aborts on panic. Only affects release
# builds; `cargo test` still unwinds (so #[should_panic] works).
[profile.release]
panic = "abort"
