[workspace]
members = [
    "crates/oraclemcp-error",
    "crates/oraclemcp-telemetry",
    "crates/oraclemcp-audit",
    "crates/oraclemcp-guard",
    "crates/oraclemcp-config",
    "crates/oraclemcp-db",
    "crates/oraclemcp-auth",
    "crates/oraclemcp-core",
    "crates/oraclemcp",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/MuhDur/oraclemcp"
homepage = "https://github.com/MuhDur/oraclemcp"
# No `rust-version`: the thin-native line is pinned to nightly because
# asupersync uses nightly-only language features (try_trait_v2 + its residual).
# The oracledb 0.7.2 driver is stable-clean and is NOT the reason for the pin.
keywords = ["oracle", "mcp", "database", "sql"]
categories = ["database", "development-tools"]

[workspace.dependencies]
# D1 (WP-D observability): the `metrics` feature unlocks asupersync's
# Tokio-free OTLP exporters (OtlpHttpExporter / OtlpLogsHttpExporter +
# LogsSnapshot::to_otlp_protobuf, all over asupersync's own HTTP/1 client).
# TRAP (bead oraclemcp-040-epic-wp-d-1il.1): enable ONLY `metrics` here;
# NEVER opentelemetry-proto gen-tonic-messages or an SDK rt-tokio feature —
# either pulls tonic -> tokio and fails the boundary lint. The `-i tokio` /
# `-i reqwest` gates in scripts/oraclemcp_boundary_lint.sh keep this honest.
asupersync = { version = "0.3.4", default-features = false, features = ["metrics"] }
# Dyn-compatibility shim for the async `OracleConnection` trait (B1): boxes the
# returned futures so `&dyn`/`Box<dyn OracleConnection>` stay object-safe. Used
# in `?Send` mode (the dispatch runtime is current-thread and never spawns the
# dispatch future across OS threads). MIT/Apache-2.0 — covered by deny.toml's
# permissive license allow-list.
async-trait = "0.1"
# Pinned EXACTLY (B2; plan §8). The whole oracledb surface is isolated behind one
# adapter (crates/oraclemcp-db/src/connection.rs); the 0.2.2 -> 0.5.x cut-over was
# the deliberate, single-file change that exact pin guarantees — never an
# accidental float into a new minor. Keep the `=` pin; bump it deliberately
# (adapter + contract suite green, full gate battery re-run) for each upgrade.
oracledb = { version = "=0.8.1", default-features = false }
# The pure-Rust, sans-I/O TNS/TTC protocol core that `oracledb` itself builds on.
# The TNS-onboarding parse adapter (crates/oraclemcp-db/src/tns.rs) reuses its
# `TnsnamesReader` DIRECTLY via the `oracledb_protocol::` path — which does NOT
# match the driver-seam pattern (`oracledb` + `::`) that
# scripts/oraclemcp_driver_seam_lint.sh confines to connection.rs, because the
# `_` breaks the adjacency. Pinned EXACTLY to the version `oracledb 0.7.2`
# already resolves, so this direct edge never floats the graph; pure
# encode/decode (no async runtime), so the engine-free boundary holds.
oracledb-protocol = { version = "=0.8.1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# D1 observability: hand-rolled OTLP metrics/trace protobuf encoders
# (ExportMetricsServiceRequest / ExportTraceServiceRequest). asupersync's
# own metrics/trace proto encoders are cfg(fuzz)/test-gated and pull
# opentelemetry-proto, so they are NOT reachable from a prod build — we
# mirror the wire shape with our own `#[derive(prost::Message)]` structs.
# prost is already in the production graph transitively (asupersync's logs
# exporter uses it); pinning the same major keeps a single resolved version.
# Apache-2.0 — covered by deny.toml's permissive allow-list. Brings NO async
# runtime (prost is pure encode/decode), so the engine-free boundary holds.
prost = { version = "0.14", default-features = false, features = ["derive", "std"] }
parking_lot = "0.12"
sha2 = "0.11"
thiserror = "2"
tracing = "0.1"
rust-embed = { version = "8.11.0", default-features = false }
# A-plsql: optional PL/SQL intelligence engine crates. Keep these exact-pinned
# and runtime-free; the default oraclemcp build stays engine-free.
plsql-core = { version = "=0.7.0", default-features = false }
plsql-engine = { version = "=0.7.0", default-features = false }
plsql-catalog = { version = "=0.7.0", default-features = false }
plsql-depgraph = { version = "=0.7.0", default-features = false }
plsql-lineage = { version = "=0.7.0", default-features = false }
plsql-ir = { version = "=0.7.0", default-features = false }
plsql-parser-antlr = { version = "=0.7.0", default-features = false }
plsql-symbols = { version = "=0.7.0", default-features = false }
plsql-cicd = { version = "=0.7.0", default-features = false }
plsql-doc = { version = "=0.7.0", default-features = false }
plsql-sast = { version = "=0.7.0", default-features = false }
plsql-output = { version = "=0.7.0", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

# Crash safety: release builds unwind so per-lane panic containment can
# quarantine a failed lane without aborting sibling lanes.
[profile.release]
panic = "unwind"

# Profiling-only build (callgrind/samply attribution). Inherits release so the
# hotspot picture matches the shipped binary; adds debug line tables + keeps
# symbols. NOT used for releases. `cargo build/test/bench --profile release-perf`.
[profile.release-perf]
inherits = "release"
debug = "line-tables-only"
strip = false
