[package]
name = "oraclemcp-audit"
version = "0.6.2"
description = "Out-of-band durable audit sink (fsync-before-execute, hash chain) for oraclemcp (Apache-2.0 OR MIT)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
oraclemcp-error = { path = "../oraclemcp-error", version = "0.6.2" }
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
sha2.workspace = true
thiserror.workspace = true
# D2 audit shipping: a forward failure is logged + dropped (fail-safe) rather
# than failing the local durable chain; tracing is the warn/debug channel.
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
