[package]
name = "oraclemcp-audit"
version = "0.9.0"
description = "Out-of-band durable audit sink (fsync-before-execute, hash chain) for oraclemcp (Apache-2.0 OR MIT)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
oraclemcp-error = { path = "../oraclemcp-error", version = "0.9.0" }
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
sha2.workspace = true
thiserror.workspace = true
# D2 audit shipping: a forward failure is logged + dropped (fail-safe) rather
# than failing the local durable chain; tracing is the warn/debug channel.
tracing.workspace = true

[dev-dependencies]
proptest = "1"
tempfile = "3"

# Loom model checks for the shipping-spool worker/shutdown/enqueue sync
# skeleton (tests/loom_shipping_spool.rs, bead H6). Compiled ONLY when
# RUSTFLAGS="--cfg loom" is set (the tokio pattern), so it never enters the
# production dependency graph and adds nothing to ordinary `cargo test` builds.
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[lints]
workspace = true
