[package]
name = "oraclemcp-auth"
version = "0.3.0"
description = "Transport auth (OAuth 2.1 RS, mTLS, init token), step-up confirmation delivery and secrets for oraclemcp (Apache-2.0 OR MIT)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
oraclemcp-error = { path = "../oraclemcp-error", version = "0.3.0" }
oraclemcp-guard = { path = "../oraclemcp-guard", version = "0.3.0" }
oraclemcp-audit = { path = "../oraclemcp-audit", version = "0.3.0" }
serde.workspace = true
zeroize = { version = "1", features = ["alloc"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
