[package]
name = "oraclemcp-config"
version = "0.6.5"
description = "Layered configuration + connection profiles for the oraclemcp Oracle MCP server (Apache-2.0 OR MIT)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
oraclemcp-error = { path = "../oraclemcp-error", version = "0.6.5" }
oraclemcp-guard = { path = "../oraclemcp-guard", version = "0.6.5" }
figment = { version = "0.10", features = ["toml", "env"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
figment = { version = "0.10", features = ["toml", "env", "test"] }

[lints]
workspace = true
