[package]
name = "oraclemcp-core"
version = "0.3.0"
description = "MCP protocol surface, Tool/ToolRegistry contract and capabilities for the oraclemcp server."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
oraclemcp-error = { path = "../oraclemcp-error", version = "0.3.0" }
oraclemcp-config = { path = "../oraclemcp-config", version = "0.3.0" }
oraclemcp-db = { path = "../oraclemcp-db", version = "0.3.0" }
oraclemcp-guard = { path = "../oraclemcp-guard", version = "0.3.0" }
oraclemcp-audit = { path = "../oraclemcp-audit", version = "0.3.0" }
oraclemcp-auth = { path = "../oraclemcp-auth", version = "0.3.0" }
oraclemcp-telemetry = { path = "../oraclemcp-telemetry", version = "0.3.0" }
asupersync.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml = "0.8"
tracing.workspace = true
wait-timeout = "0.2"

[dev-dependencies]
rcgen = "0.13"

[lints]
workspace = true
