[package]
name = "oraclemcp-core"
version = "0.6.2"
description = "MCP protocol surface, Tool/ToolRegistry contract and capabilities for the oraclemcp server."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
dashboard-bundle = ["dep:rust-embed"]

[dependencies]
oraclemcp-error = { path = "../oraclemcp-error", version = "0.6.2" }
oraclemcp-config = { path = "../oraclemcp-config", version = "0.6.2" }
oraclemcp-db = { path = "../oraclemcp-db", version = "0.6.2" }
oraclemcp-guard = { path = "../oraclemcp-guard", version = "0.6.2" }
oraclemcp-audit = { path = "../oraclemcp-audit", version = "0.6.2" }
oraclemcp-auth = { path = "../oraclemcp-auth", version = "0.6.2" }
oraclemcp-telemetry = { path = "../oraclemcp-telemetry", version = "0.6.2" }
asupersync.workspace = true
async-trait.workspace = true
getrandom = "0.2"
parking_lot.workspace = true
rust-embed = { workspace = true, optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml = "0.8"
tracing.workspace = true
wait-timeout = "0.2"

[dev-dependencies]
async-trait.workspace = true
rcgen = "0.13"
# Compile-fail fixtures for the A9 capability-narrowing release gate. trybuild
# is MIT OR Apache-2.0 (both already on the deny.toml allowlist). asupersync's
# test-only `for_testing` constructor (gated behind `test-internals`) lets the
# fixtures build a full-authority Cx to narrow from.
trybuild = "1.0"
asupersync = { workspace = true, features = ["test-internals"] }

[lints]
workspace = true
