[package]
name = "oraclemcp-core"
version = "0.9.0"
description = "MCP protocol surface, Tool/ToolRegistry contract and capabilities for the oraclemcp server."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
dashboard-bundle = ["dep:rust-embed"]

[dependencies]
oraclemcp-error = { path = "../oraclemcp-error", version = "0.9.0" }
oraclemcp-config = { path = "../oraclemcp-config", version = "0.9.0" }
oraclemcp-db = { path = "../oraclemcp-db", version = "0.9.0" }
oraclemcp-guard = { path = "../oraclemcp-guard", version = "0.9.0" }
oraclemcp-audit = { path = "../oraclemcp-audit", version = "0.9.0" }
oraclemcp-auth = { path = "../oraclemcp-auth", version = "0.9.0" }
oraclemcp-telemetry = { path = "../oraclemcp-telemetry", version = "0.9.0" }
# B2.1 doctor wallet-posture probe: the doctor statically probes wallet files and
# infers "what the driver's wallet loader would do" via the pure, sans-I/O
# `oracledb_protocol::tls::{wallet,sso}` parsers (parse_ewallet_pem/_p12,
# parse_cwallet_sso, resolve_wallet_dir). This is SEAM-CLEAN: the driver-seam
# lint matches the driver path `oracledb::` only — the `_` in `oracledb_protocol`
# breaks the adjacency, exactly as oraclemcp-db's TNS adapter already relies on.
# Pure encode/decode (no async runtime), so the engine-free boundary holds.
oracledb-protocol = { workspace = true }
asupersync.workspace = true
async-trait.workspace = true
# `token_exec` and plugin subprocesses run in OS containment units: POSIX process
# groups on Unix and Job Objects on Windows. Killing a unit closes
# descendant-held pipes as well as reaping the direct child, so deadlines are
# real across the complete helper tree.
command-group = "5.0.1"
getrandom = "0.2"
parking_lot.workspace = true
rust-embed = { workspace = true, optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml = "0.8"
tracing.workspace = true
wait-timeout = "0.2"

# The service-lock sidecar must be opened with `O_NOFOLLOW` so a symlinked lock
# is refused in the open itself rather than followed into an arbitrary truncate
# (bead oraclemcp-siry). `OpenOptionsExt::custom_flags` is a safe API — this
# keeps `#![forbid(unsafe_code)]` — but the flag's value is platform-specific,
# so it must come from libc rather than a hardcoded constant. libc is already in
# the dependency graph transitively; this adds no new package.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
rustix = { version = "1.1.4", features = ["fs"] }

[dev-dependencies]
async-trait.workspace = true
rcgen = "0.13"
# Golden-artifact discipline (D6.3d): the shared `Scrubber` in
# tests/golden/support.rs (included here via `#[path]`) uses `regex`. Already in
# the dependency graph; MIT OR Apache-2.0 (deny.toml allow-list).
regex = "1"
# Compile-fail fixtures for the A9 capability-narrowing release gate. trybuild
# is MIT OR Apache-2.0 (both already on the deny.toml allowlist). asupersync's
# test-only `for_testing` constructor (gated behind `test-internals`) lets the
# fixtures build a full-authority Cx to narrow from.
trybuild = "1.0"
asupersync = { workspace = true, features = ["test-internals"] }

[lints]
workspace = true
