[package]
name = "oraclemcp-db"
version = "0.3.0"
description = "Oracle connectivity, pooling, session leases and the type/NLS serializer for oraclemcp."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Live Oracle integration tests (gated; require a reachable DB).
live-xe = []

[dependencies]
asupersync.workspace = true
oraclemcp-error = { path = "../oraclemcp-error", version = "0.3.0" }
oraclemcp-guard = { path = "../oraclemcp-guard", version = "0.3.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
oracledb.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "page_serialization"
harness = false

[[bench]]
name = "classify_type"
harness = false

[[bench]]
name = "lob_capping"
harness = false

[lints]
workspace = true
