[package]
name = "oraclemcp-db"
version = "0.6.5"
description = "Oracle connectivity, pooling, session leases and the type/NLS serializer for oraclemcp."
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Live Oracle integration tests (gated; require a reachable DB).
live-xe = []

[dependencies]
asupersync.workspace = true
async-trait.workspace = true
oraclemcp-error = { path = "../oraclemcp-error", version = "0.6.5" }
oraclemcp-guard = { path = "../oraclemcp-guard", version = "0.6.5" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
# D1-traces (bead oraclemcp-040-epic-wp-d-1il.3): enable oracledb's `tracing`
# feature so DB-call spans flow into the OTLP trace layer. It only adds the
# `tracing` dep (no async runtime), so the engine-free boundary holds.
oracledb = { workspace = true, features = ["tracing"] }

[dev-dependencies]
async-trait.workspace = true
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# Compile-fail fixture for the R1 routine-argument gate: OracleRoutineArg must
# never become deserializable as an agent-facing tool argument.
trybuild = "1.0"

[[bench]]
name = "page_serialization"
harness = false

[[bench]]
name = "classify_type"
harness = false

[[bench]]
name = "lob_capping"
harness = false

[lints]
workspace = true
