[package]
name = "oraclemcp-db"
version = "0.10.0"
description = "Oracle connectivity, pooling, session leases and the type/NLS serializer for oraclemcp."
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Live Oracle integration tests (gated; require a reachable DB).
live-xe = []
# Test-only seam for higher-level crates that need deterministic row streams
# without naming the driver-owned stream type.
test-utils = []

[dependencies]
asupersync.workspace = true
async-trait.workspace = true
oraclemcp-error = { path = "../oraclemcp-error", version = "0.10.0" }
oraclemcp-guard = { path = "../oraclemcp-guard", version = "0.10.0" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures-core.workspace = true
getrandom = "0.2"
# D1-traces (bead oraclemcp-040-epic-wp-d-1il.3): enable oracledb's `tracing`
# feature so DB-call spans flow into the OTLP trace layer. It only adds the
# `tracing` dep (no async runtime), so the engine-free boundary holds.
oracledb = { workspace = true, features = ["tracing"] }
# TNS-onboarding parse adapter (src/tns.rs): reuse the upstream pure-Rust
# `TnsnamesReader` from the protocol core directly, via the `oracledb_protocol::`
# path, so the driver-adapter seam stays confined to connection.rs (the `_`
# keeps it off the `oracledb`+`::` seam pattern).
oracledb-protocol = { workspace = true }

[dev-dependencies]
async-trait.workspace = true
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# Golden-artifact discipline (D6.3d): the shared `Scrubber` in
# tests/golden/support.rs (included here via `#[path]`) uses `regex`. Already in
# the dependency graph; MIT OR Apache-2.0 (deny.toml allow-list).
regex = "1"
# Compile-fail fixture for the R1 routine-argument gate: OracleRoutineArg must
# never become deserializable as an agent-facing tool argument.
trybuild = "1.0"

[[bench]]
name = "page_serialization"
harness = false

[[bench]]
name = "classify_type"
harness = false

[[bench]]
name = "lob_capping"
harness = false

[lints]
workspace = true
