[package]
name = "oraclemcp-error"
version = "0.6.0"
description = "Structured, agent-facing error envelope for the oraclemcp Oracle MCP server (Apache-2.0 OR MIT)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
