[package]
name = "oraclemcp-guard"
version = "0.1.0"
description = "Fail-closed statement classifier, operating levels, policy and approval tokens for oraclemcp (Apache-2.0 OR MIT)"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
oraclemcp-error = { path = "../oraclemcp-error", version = "0.1.0" }
oraclemcp-audit = { path = "../oraclemcp-audit", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlparser = "0.62"
regex = "1"
thiserror.workspace = true

[lints]
workspace = true
