[package]
name = "oraclemcp"
version = "0.4.1"
description = "Engine-free, governed least-privilege Oracle Database MCP server with a fail-closed SQL guard and confirmation-gated operating levels (independent open-source project)."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "oraclemcp"
path = "src/main.rs"

[features]
default = []
# Opt in to the published PL/SQL intelligence engine crates. Default builds stay
# engine-free; the feature build resolves the offline engine from crates.io.
plsql-intelligence = [
    "dep:chrono",
    "dep:plsql-core",
    "dep:plsql-engine",
    "dep:plsql-catalog",
    "dep:plsql-depgraph",
    "dep:plsql-lineage",
    "dep:plsql-ir",
    "dep:plsql-parser-antlr",
    "dep:plsql-cicd",
    "dep:plsql-doc",
    "dep:plsql-sast",
    "dep:plsql-output",
]
# A7 (oraclemcp-040-epic-wp-a-ia1.7): the consolidated trust/safety suite's
# LIVE assertions need a reachable Oracle. This forwards to the canonical
# `oraclemcp-db/live-xe` gate so `cargo test -p oraclemcp --features live-xe`
# turns on the same DB-backed coverage; without it the live tests are compiled
# out and the deterministic coverage still runs green offline.
live-xe = ["oraclemcp-db/live-xe"]
# Embed the operator dashboard bundle that CI/release builds under web/dist.
# Default/cargo-install builds stay Node-free and omit the bundle.
dashboard-bundle = ["oraclemcp-core/dashboard-bundle"]

[dependencies]
oraclemcp-core = { path = "../oraclemcp-core", version = "0.4.1" }
oraclemcp-db = { path = "../oraclemcp-db", version = "0.4.1" }
oraclemcp-config = { path = "../oraclemcp-config", version = "0.4.1" }
oraclemcp-guard = { path = "../oraclemcp-guard", version = "0.4.1" }
oraclemcp-auth = { path = "../oraclemcp-auth", version = "0.4.1" }
oraclemcp-audit = { path = "../oraclemcp-audit", version = "0.4.1" }
oraclemcp-error = { path = "../oraclemcp-error", version = "0.4.1" }
oraclemcp-telemetry = { path = "../oraclemcp-telemetry", version = "0.4.1" }
asupersync.workspace = true
async-trait.workspace = true
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
getrandom = "0.2"
tracing.workspace = true
tracing-subscriber = "0.3"
chrono = { version = "0.4.44", features = ["serde"], optional = true }
plsql-core = { version = "0.7.0", optional = true, default-features = false }
plsql-engine = { version = "0.7.0", optional = true, default-features = false }
plsql-catalog = { version = "0.7.0", optional = true, default-features = false }
plsql-depgraph = { version = "0.7.0", optional = true, default-features = false }
plsql-lineage = { version = "0.7.0", optional = true, default-features = false }
plsql-ir = { version = "0.7.0", optional = true, default-features = false }
plsql-parser-antlr = { version = "0.7.0", optional = true, default-features = false }
plsql-cicd = { version = "0.7.0", optional = true, default-features = false }
plsql-doc = { version = "0.7.0", optional = true, default-features = false }
plsql-sast = { version = "0.7.0", optional = true, default-features = false }
plsql-output = { version = "0.7.0", optional = true, default-features = false }

[dev-dependencies]
rcgen = "0.13"

[lints]
workspace = true
