[package]
name = "oraclemcp"
version = "0.7.2"
description = "Engine-free, governed least-privilege Oracle Database MCP server with a fail-closed SQL guard and confirmation-gated operating levels (independent open-source project)."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "oraclemcp"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[features]
default = []
# Opt in to the published PL/SQL intelligence engine crates. Default builds stay
# engine-free; the feature build resolves the offline engine from crates.io.
plsql-intelligence = [
    "dep:chrono",
    "dep:plsql-core",
    "dep:plsql-engine",
    "dep:plsql-catalog",
    "dep:plsql-depgraph",
    "dep:plsql-lineage",
    "dep:plsql-ir",
    "dep:plsql-parser-antlr",
    "dep:plsql-symbols",
    "dep:plsql-cicd",
    "dep:plsql-doc",
    "dep:plsql-sast",
    "dep:plsql-output",
]
# A7 (oraclemcp-040-epic-wp-a-ia1.7): the consolidated trust/safety suite's
# LIVE assertions need a reachable Oracle. This forwards to the canonical
# `oraclemcp-db/live-xe` gate so `cargo test -p oraclemcp --features live-xe`
# turns on the same DB-backed coverage; without it the live tests are compiled
# out and the deterministic coverage still runs green offline.
live-xe = ["oraclemcp-db/live-xe"]
# Embed the operator dashboard bundle that CI/release builds under web/dist.
# Default/cargo-install builds stay Node-free and omit the bundle.
dashboard-bundle = ["oraclemcp-core/dashboard-bundle"]
# Optional allocator for production packages that deliberately opt into native
# allocator code. The default build stays pure Rust and does not require a C
# toolchain.
mimalloc = ["dep:mimalloc"]

[dependencies]
oraclemcp-core = { path = "../oraclemcp-core", version = "0.7.2" }
oraclemcp-db = { path = "../oraclemcp-db", version = "0.7.2" }
oraclemcp-config = { path = "../oraclemcp-config", version = "0.7.2" }
oraclemcp-guard = { path = "../oraclemcp-guard", version = "0.7.2" }
oraclemcp-auth = { path = "../oraclemcp-auth", version = "0.7.2" }
oraclemcp-audit = { path = "../oraclemcp-audit", version = "0.7.2" }
oraclemcp-error = { path = "../oraclemcp-error", version = "0.7.2" }
oraclemcp-telemetry = { path = "../oraclemcp-telemetry", version = "0.7.2" }
asupersync.workspace = true
async-trait.workspace = true
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde.workspace = true
serde_json.workspace = true
getrandom = "0.2"
tracing.workspace = true
tracing-subscriber = "0.3"
chrono = { version = "0.4.44", features = ["serde"], optional = true }
mimalloc = { version = "0.1.52", default-features = false, optional = true }
plsql-core = { workspace = true, optional = true }
plsql-engine = { workspace = true, optional = true }
plsql-catalog = { workspace = true, optional = true }
plsql-depgraph = { workspace = true, optional = true }
plsql-lineage = { workspace = true, optional = true }
plsql-ir = { workspace = true, optional = true }
plsql-parser-antlr = { workspace = true, optional = true }
plsql-symbols = { workspace = true, optional = true }
plsql-cicd = { workspace = true, optional = true }
plsql-doc = { workspace = true, optional = true }
plsql-sast = { workspace = true, optional = true }
plsql-output = { workspace = true, optional = true }

[dev-dependencies]
rcgen = "0.13"
toml = "0.8"

[lints]
workspace = true
